<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TempleHistoryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/backBtn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/green"
            android:text="Kembali ke menu"
            android:fontFamily="@font/poppins_regular"
            android:textAllCaps="false"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:contentDescription="@string/button"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/btnTint" />


        <ImageButton
            android:id="@+id/help"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:contentDescription="@string/button"
            android:src="@drawable/ic_baseline_help_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/btnTint" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/roundedImageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@+id/back"
            app:riv_corner_radius="12dp"
            tools:layout_editor_absoluteX="32dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="Sejarah"
            android:textColor="@color/primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/roundedImageView" />


        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_extra_bold"
            android:text="SEJARAH CANDI SANGGRAHAN"
            android:textColor="@color/btnTint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />


        <com.codesgood.views.JustifiedTextView
            android:id="@+id/text14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_regular"
            android:layout_marginEnd="32dp"
            android:text="@string/ketentuan_layanan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <com.codesgood.views.JustifiedTextView
            android:id="@+id/textView14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/black"
            android:layout_marginEnd="32dp"
            android:text="@string/desc2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text14" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
