<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".drawer_content.PetunjukUmumActivity"
    tools:ignore="ScrollViewCount">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:contentDescription="@string/button"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/btnTint" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins_extra_bold"
            android:text="Petunjuk Umum Penggunaan\nAplikasi Etnow Legends"
            android:textAlignment="center"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textColor="@color/btnTint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15">

            <TextView
                android:id="@+id/bullet1"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extra_bold"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="\u2022"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bullet1Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:textColor="@color/btnTint"
                android:fontFamily="@font/poppins_regular"
                android:paddingBottom="10dp"
                android:text="Pilih menu yang akan kamu pelajari" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15">

            <TextView
                android:id="@+id/bullet2"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extra_bold"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="\u2022"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bullet2Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:textColor="@color/btnTint"
                android:fontFamily="@font/poppins_regular"
                android:paddingBottom="10dp"
                android:text="@string/petunjuk2" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15">

            <TextView
                android:id="@+id/bullet3"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extra_bold"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="\u2022"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bullet3Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:textColor="@color/btnTint"
                android:fontFamily="@font/poppins_regular"
                android:paddingBottom="10dp"
                android:text="@string/petunjuk3" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15">

            <TextView
                android:id="@+id/bullet4"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_extra_bold"
                android:gravity="right"
                android:paddingRight="10dp"
                android:text="\u2022"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bullet4Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:textColor="@color/btnTint"
                android:fontFamily="@font/poppins_regular"
                android:paddingBottom="10dp"
                android:text="@string/petunjuk4" />
        </LinearLayout>


    </LinearLayout>






</ScrollView>