<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".materi.SubMateriActivity">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:contentDescription="@string/button"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/btnTint" />


    <ImageButton
        android:id="@+id/help"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:contentDescription="@string/button"
        android:src="@drawable/ic_baseline_help_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/btnTint" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:text="Pilih materi yang akan kamu pelajari"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back" />

    <com.codesgood.views.JustifiedTextView
        android:id="@+id/textView22"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginEnd="32dp"
        android:text="@string/sub_materi_desc"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_view"
        android:backgroundTint="@color/ungu"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        tools:layout_editor_absoluteX="32dp" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/roundedImageView2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/rounded_view"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintStart_toStartOf="@id/view4"
        app:layout_constraintTop_toTopOf="@+id/view4" />

    <View
        android:id="@+id/view7"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@color/ungu_tua"
        app:layout_constraintBottom_toBottomOf="@+id/roundedImageView2"
        app:layout_constraintEnd_toEndOf="@+id/roundedImageView2"
        app:layout_constraintStart_toStartOf="@+id/roundedImageView2"
        app:layout_constraintTop_toTopOf="@+id/roundedImageView2" />


    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_extra_bold"
        android:text="Persegi"
        android:textColor="@color/btnTint"
        app:layout_constraintBottom_toBottomOf="@+id/view4"
        app:layout_constraintStart_toEndOf="@+id/roundedImageView2"
        app:layout_constraintTop_toTopOf="@+id/view4"
        app:layout_constraintVertical_bias="0.262" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_regular"
        android:text="Pelajari Bangun Datar\nPersegi"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/roundedImageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <View
        android:id="@+id/view8"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_view"
        android:backgroundTint="@color/header_blue"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        tools:layout_editor_absoluteX="32dp" />

    <View
        android:id="@+id/view9"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/rounded_view"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintStart_toStartOf="@+id/view8"
        app:layout_constraintTop_toTopOf="@+id/view8"
        app:layout_constraintVertical_bias="0.55" />

    <View
        android:layout_width="60dp"
        android:layout_height="30dp"
        android:background="@color/biru_tua"
        app:layout_constraintBottom_toBottomOf="@+id/view9"
        app:layout_constraintEnd_toEndOf="@+id/view9"
        app:layout_constraintStart_toStartOf="@+id/view9"
        app:layout_constraintTop_toTopOf="@+id/view9" />


    <TextView
        android:id="@+id/tv10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_extra_bold"
        android:text="Persegi Panjang"
        android:textColor="@color/btnTint"
        app:layout_constraintStart_toEndOf="@+id/view9"
        app:layout_constraintTop_toTopOf="@+id/view8" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"
        android:text="Pelajari Bangun Datar\nPersegi Panjang"
        app:layout_constraintStart_toEndOf="@+id/roundedImageView2"
        app:layout_constraintTop_toBottomOf="@+id/tv10" />



    <View
        android:id="@+id/view10"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/rounded_view"
        android:backgroundTint="@color/hijau_tua"
        app:layout_constraintTop_toBottomOf="@+id/view8"
        tools:layout_editor_absoluteX="32dp" />

    <View
        android:id="@+id/view11"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/rounded_view"
        android:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/view10"
        app:layout_constraintStart_toStartOf="@+id/view10"
        app:layout_constraintTop_toTopOf="@+id/view10"
        app:layout_constraintVertical_bias="0.55" />


    <TextView
        android:id="@+id/tv111"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/poppins_extra_bold"
        android:text="Segitiga"
        android:textColor="@color/btnTint"
        app:layout_constraintStart_toEndOf="@+id/view11"
        app:layout_constraintTop_toTopOf="@+id/view11" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/poppins_regular"
        android:text="Pelajari Bangun Datar\nSegitiga"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/roundedImageView2"
        app:layout_constraintTop_toBottomOf="@+id/tv111" />


    <ImageView
        android:id="@+id/segitiga"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="@+id/view11"
        app:layout_constraintEnd_toEndOf="@+id/view11"
        app:layout_constraintStart_toStartOf="@+id/view11"
        app:layout_constraintTop_toTopOf="@+id/view11" />
</androidx.constraintlayout.widget.ConstraintLayout>